@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19940702
+MANIFEST for ded, version t19940704
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for DED
